--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "axios": "^1.9.0",
     "dotenv": "^16.5.0",
     "grammy": "^1.36.1",
-    "openai": "^4.100.0"
+    "openai": "^4.100.0",
+    "tesseract.js": "^6.0.1"
   }
 }
