--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "devDependencies": {
+    "@types/node": "^22.15.20",
     "@typescript-eslint/eslint-plugin": "^8.32.1",
     "@typescript-eslint/parser": "^8.32.1",
     "eslint": "^9.27.0",
@@ -11,8 +12,6 @@
   "dependencies": {
     "axios": "^1.9.0",
     "dotenv": "^16.5.0",
-    "grammy": "^1.36.1",
-    "openai": "^4.100.0",
-    "tesseract.js": "^6.0.1"
+    "grammy": "^1.36.1"
   }
 }
