--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.9.0",
     "dotenv": "^16.5.0",
+    "googleapis": "^149.0.0",
     "grammy": "^1.36.1"
   }
 }
