--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "@grammyjs/auto-retry": "^2.0.2",
     "axios": "^1.9.0",
     "dotenv": "^16.5.0",
     "googleapis": "^149.0.0",
